# aoc

./: .env  .gitignore  Cargo.toml  README.MD  advent_data.db  fill_sqlite  generate_files.sh
2022/: example5
src/: animator.rs  cli.rs  macros.rs  main.rs  menu.rs  solutions.rs  sprites.rs  twentytwentyfive.rs  twentytwentyfour.rs  twentytwentyone.rs  twentytwentythree.rs  twentytwentytwo.rs  utils.rs
src/2024/: eight.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  twelve.rs  twentyfive.rs  twentytwo.rs
src/twentytwentyfive/: five.rs  four.rs  one.rs  seven.rs  six.rs  three.rs  two.rs
src/twentytwentyfour/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  nine.rs  nineteen.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  twenty.rs  twentyfive.rs  twentyfour.rs  twentyone.rs  twentythree.rs  twentytwo.rs  two.rs
src/twentytwentythree/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  nine.rs  nineteen.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  twenty.rs  twentyfive.rs  twentyfour.rs  twentyone.rs  twentythree.rs  twentytwo.rs  two.rs
src/twentytwentytwo/: day_five.rs  day_four.rs  day_one.rs  day_seven.rs  day_six.rs  day_three.rs  day_two.rs
