[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.3"
crossterm = "0.27.0"
image = "0.24.7"
indexmap = "2.0.2"
maplit = "1.0.2"
nom = "7"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.8.0"
regex = "1"
uuid = { version = "1.2.2", features = ["v4"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.42.0", features = ["full"] }
